--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,32 @@
 body{
 margin: 0;
 }
+.flash{
+    padding:15px;
+    border-radius: 10px;
+}
+.flash.success{
+    border: 1px solid #21DB56;
+    background: #AEFFC5;
+}
+.flash.error{
+    border: 1px solid #FF4343;
+    background: #FF9C9C;
+}
+.form-contact label{
+    display: inline-block;
+    min-width: 80px;
+}
+.form-contact p{
+    margin: 10px 0 10px 0;
+
+}
 .topnav {
   background-color: #333;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */.topnav a {
+.topnav a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -16,12 +36,12 @@ margin: 0;
   font-size: 17px;
 }
 
-/* Change the color of links on hover */.topnav a:hover {
+.topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Add an active class to highlight the current page */.topnav a.active {
+.topnav a.active {
   background-color: #04AA6D;
   color: white;
 }
