--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,11 @@
 {% for cat, msg in get_flashed_messages() %}
     <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
-    <form action="/login" method="post" class="form-contact">
+    <form action="/register" method="post" class="form-contact">
+    <p>
+        <label>Имя:</label>
+        <input type="text" name="name" value="" required>
+    </p>
     <p>
         <label>Email:</label>
         <input type="text" name="email" value="" required>
@@ -15,11 +19,12 @@
         <input type="password" name="psw" value="" required>
     </p>
     <p>
-        <input type="checkbox" name="remainme">Запомнить меня
+        <label>Повторить пароль:</label>
+        <input type="password" name="psw2" value="" required>
     </p>
-    <p><input type="submit" value="Войти"></p>
+    <p><input type="submit" value="Регистрация"></p>
         <hr align=left width="300px">
-        <p><a href="{{url_for('register')}}">Регистрация</a></p>
+        <p><a href="{{url_for('login')}}">Уже есть аккаунт? Войти</a></p>
 </form>
 
 {% endblock content %}
