--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {{ super() }}
-{% for cat, msg in get_flashed_messages() %}
+{% for cat, msg in get_flashed_messages(True) %}
     <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
     <form action="/register" method="post" class="form-contact">
