--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,14 +10,15 @@
         <label>Имя:</label>
         <input type="text" name="name" value="" required>
     </p>
-    <p>
+     <p>
         <label>Email:</label>
         <input type="text" name="email" value="" required>
     </p>
-    <p>
+     <p>
         <label>Сообщение:</label>
     </p>
-    <textarea type="text" name="message" rows="7" cols="40" required></textarea>
+    <textarea name="message" rows="7" cols="40" required></textarea>
     <p><input type="submit" value="Отправить"></p>
 </form>
-{% endblock content %}
+{% endblock %}
+
