--- a/templates/page404.html
+++ b/templates/page404.html
@@ -3,8 +3,8 @@
 {% block content %}
     {{ super() }}
     <p>
-        Данной страницы не существует, вернитесь
-        <a href="/"> на главную </a> страницу
+      Данной страници не существует, вернитесь
+        <a href="/"> на главную</a> страницу
     </p>
+{% endblock %}
 
-{% endblock content %}
