--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,60 +1,12 @@
 body{
-margin: 0;
-}
-
-ul.list-posts {
-    list-style:none;
-    margin: 0;
-    padding 0;
-    max-width 600px;
-}
-
-ul.list-posts li{
-    margin: 20px 0 0 0;
-    border 1px solid #eee;
-}
-
-ul.list-posts .title{
-    margin: 0px;
-    padding: 5px;
-    background: #eee;
-    text-decoration: none;
-}
-ul.list-posts .title a:hover{
-    color: blue;
-    text-decoration: none;
-}
-
-ul.list-posts .annonce{
-    margin: 0px;
-    padding: 10px 5px 10px 5px;
-
-}
-.flash{
-    padding:15px;
-    border-radius: 10px;
-}
-.flash.success{
-    border: 1px solid #21DB56;
-    background: #AEFFC5;
-}
-.flash.error{
-    border: 1px solid #FF4343;
-    background: #FF9C9C;
-}
-.form-contact label{
-    display: inline-block;
-    min-width: 80px;
-}
-.form-contact p{
-    margin: 10px 0 10px 0;
-
+margin:0;
 }
 .topnav {
   background-color: #333;
   overflow: hidden;
 }
 
+/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
@@ -65,20 +17,24 @@ ul.list-posts .annonce{
   font-size: 17px;
 }
 
+/* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
+/* Add an active class to highlight the current page */
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */.topnav .icon {
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
   display: none;
 }
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */@media screen and (max-width: 600px) {
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
@@ -86,7 +42,8 @@ ul.list-posts .annonce{
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */@media screen and (max-width: 600px) {
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
     position: absolute;
@@ -98,4 +55,98 @@ ul.list-posts .annonce{
     display: block;
     text-align: left;
   }
+}
+
+.form-contact label{
+    display: inline-block;
+    min-width: 80px;
+}
+.form-contact p {
+ margin:10px 0 10px 0;
+}
+.flash{
+    padding: 15px;
+    border-radius: 10px;
+}
+.flash.success{
+    border: 1px solid #21DB56;
+    background: #AEFFC5;
+}
+
+.flash.error{
+    border: 1px solid #FF4343;
+    background: #FF9C9C;
+}
+
+ul.list-posts {
+
+margin:0;
+padding:0;
+max-width:600px;
+}
+ul.list-posts li{
+margin:20px 0 0 0;
+border: 1px solid #eee;
+
+}
+ul.list-posts .title{
+    margin:0px;
+    padding:5px;
+    background: #eee;
+    color:red;
+  text-decoration: none;
+}
+ul.list-posts .title a{
+  color: blue;
+  text-decoration: none;
+}
+ul.list-posts .title a:hover{
+  color: #43437e ;
+  text-decoration: none;
+}
+ul.list-posts .annonce{
+  margin:0px;
+  padding:10px 5px 10px 5px;
+}
+
+.profile-ava{
+  width: 180px;
+  text-align: center;
+  overflow: hidden;
+  background: #eee;
+  padding: 10px;
+}
+.profile-ava img{
+  max-width: 130px;
+  height: auto;
+  border-radius: 10px;
+}
+.profile-load{
+  max-width: 155px;
+  margin-top: 10px;
+  overflow: hidden;
+}
+.profile-load input[type = "submit"], input[type = "file"]{
+  width: 100%;
+  font-size: 18px;
+  border-radius: 8px;
+  border: none;
+  padding: 10px 5px;
+  margin-top: 5px;
+}
+.profile-table tr{
+  display: flex;
+  flex-wrap: wrap;
+}
+.profile-panel{
+  padding: 0 0 0 10px;
+}
+ul.profile-info{
+  list-style: none;
+  margin: 10px 0 0 0;
+  padding: 0;
+  color: #333;
+}
+ul.profile-info li{
+  margin-top: 10px 0 0 0;
 }
