--- a/templates/login.html
+++ b/templates/login.html
@@ -2,24 +2,26 @@
 
 {% block content %}
     {{ super() }}
-{% for cat, msg in get_flashed_messages(True) %}
-    <div class="flash {{cat}}">{{msg}}</div>
+
+{% for cat,msg in get_flashed_messages(True) %}
+    <div class="flash  {{cat}}">{{msg}}</div>
 {% endfor %}
-    <form action="/login" method="post" class="form-contact">
+
+<form action="" method="post" class="form-contact">
     <p>
         <label>Email:</label>
         <input type="text" name="email" value="" required>
     </p>
-    <p>
+     <p>
         <label>Пароль:</label>
         <input type="password" name="psw" value="" required>
     </p>
-    <p>
-        <input type="checkbox" name="remainme">Запомнить меня
-    </p>
+     <p>
+         <input type="checkbox" name="remainme"> Запомнить меня
+     </p>
     <p><input type="submit" value="Войти"></p>
         <hr align=left width="300px">
-        <p><a href="{{url_for('register')}}">Регистрация</a></p>
+    <p><a href="{{url_for('register')}}">Регистрация</a></p>
 </form>
+{% endblock %}
 
-{% endblock content %}
