--- a/templates/register.html
+++ b/templates/register.html
@@ -2,29 +2,31 @@
 
 {% block content %}
     {{ super() }}
-{% for cat, msg in get_flashed_messages(True) %}
-    <div class="flash {{cat}}">{{msg}}</div>
+
+
+{% for cat,msg in get_flashed_messages(True) %}
+    <div class="flash  {{cat}}">{{msg}}</div>
 {% endfor %}
-    <form action="/register" method="post" class="form-contact">
+
+<form action="/register" method="post" class="form-contact">
     <p>
-        <label>Имя:</label>
+        <label>Имя: </label>
         <input type="text" name="name" value="" required>
     </p>
     <p>
-        <label>Email:</label>
+        <label>Email: </label>
         <input type="text" name="email" value="" required>
     </p>
-    <p>
+     <p>
         <label>Пароль:</label>
         <input type="password" name="psw" value="" required>
     </p>
-    <p>
-        <label>Повторить пароль:</label>
+     <p>
+        <label>Повтор пароля:</label>
         <input type="password" name="psw2" value="" required>
     </p>
     <p><input type="submit" value="Регистрация"></p>
         <hr align=left width="300px">
-        <p><a href="{{url_for('login')}}">Уже есть аккаунт? Войти</a></p>
+    <p><a href="{{url_for('login')}}">Уже есть аккаунт? Войти</a></p>
 </form>
-
-{% endblock content %}
+{% endblock %}
