дописан register и login

--- a/templates/page404.html
+++ b/templates/page404.html
@@ -3,7 +3,7 @@
 {% block content %}
     {{ super() }}
     <p>
-      Данной страници не существует, вернитесь
+      Данной страницы не существует, вернитесь
         <a href="/"> на главную</a> страницу
     </p>
 {% endblock %}
