--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,3 +150,10 @@ ul.profile-info{
 ul.profile-info li{
   margin-top: 10px 0 0 0;
 }
+.form-contact .invalid{
+  display: inline-block;
+  background-color: #ff9898;
+}
+.form-contact .invalid-feedback{
+  color: #CC0000;
+}
