--- a/admin/templates/admin/base.html
+++ b/admin/templates/admin/base.html
@@ -10,7 +10,7 @@
 {% if menu %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Админ панель</a>
+    <a class="navbar-brand" href="#">Админ Панель</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,15 +18,15 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% for p in menu %}
         <li class="nav-item">
-          <a class="nav-link active" href="#{{ url_for(p.url) }}">{{ p.title }}</a>
+          <a class="nav-link" href="{{ url_for(p.url) }}">{{ p.title }}</a>
         </li>
         {% endfor %}
       </ul>
     </div>
   </div>
 </nav>
-{% endif %}
+{%endif%}
 {% block content %}
-{% endblock content %}
+{% endblock %}
 </body>
 </html>
