--- a/admin/templates/admin/login.html
+++ b/admin/templates/admin/login.html
@@ -1,38 +1,49 @@
 {% extends 'admin/base.html' %}
 
-{% block content %}
-{{ super() }}
+{% block content%}
+{{super()}}
 <style>
+   
     :root{
         --main-bg:#4485db;
     }
-    body{
-        background-color: var(--main-bg);
-    }
+    body{ background-color: var(--main-bg);}
     .main-bg{
         background-color: var(--main-bg);
     }
+
     input:focus, button:focus{
         border: 1px solid var(--main-bg) !important;
         box-shadow: none !important;
     }
+    .centered {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* Adjust as needed */
+    }
+    .card-login{
+    max-width : 600px;
+    width: 80%;
+    }
+
 </style>
 <div class="container">
-    <div class="row justify-content-center mt-5">
-        <div class="col-lg-4 col-md-6 col-sm-6">
-            <div class="card shadow">
+    <div class="row justify-content-center">
+        <div class="centered">
+            <div class="card shadow card-login">
                 <div class="card-title text-center border-bottom">
-                <h2 class="p-3">Login</h2>
+                    <h2 class="p-3">Login</h2>
                 </div>
                 <div class="card-body">
-                    <form action="">
+                    <form action="" method="post">
                         <div class="mb-4">
-                            <label for="username" class="form-label">Username</label>
-                            <input type="text" class="form-control" name="username">
+                            <label for="username" class = "form-label">Username</label>
+                            <input type="text" class="form-control" name="username" id="username"/>
                         </div>
                         <div class="mb-4">
-                            <label for="psw" class="form-label">Password</label>
-                            <input type="password" class="form-control" name="psw" id="psw">
+                            <label for="psw" class = "form-label">Password</label>
+                            <input type="password" class="form-control" name="psw" id="psw"/>
                         </div>
                         <div class="d-grid">
                             <button type="submit" class="btn main-bg text-light">Login</button>
@@ -43,4 +54,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{%endblock%}
+
