--- a/templates/register.html
+++ b/templates/register.html
@@ -9,22 +9,22 @@
 {% endfor %}
 
 <form action="/register" method="post" class="form-contact">
-    {{form.hidden_tag()}}
-    {% for field in form if field.name not in ["csrf_token", "submit"] %}
+   {{form.hidden_tag()}}
+    {% for field in form if field.name not in ["csrf_token","submit"] %}
     <p>{{field.label()}}
         {% if field.errors %}
             {{field(class_="invalid")}}
         <span class="invalid-feedback">
-            {% for e in field.errors %}
+            {% for e in field.errors%}
                 {{ e }}
-            {% endfor %}
+            {% endfor%}
         </span>
         {% else %}
             {{field()}}
-        {% endif %}
+        {%endif%}
     {% endfor %}
-    {{form.submit()}}
-    <hr align=left width="300px">
+    <p>{{form.submit()}}
+        <hr align=left width="300px">
     <p><a href="{{url_for('login')}}">Уже есть аккаунт? Войти</a></p>
 </form>
 {% endblock %}
